# b3d-vis

./: .gitmodules  vcpkg.json
renderer/lib/: RendererBase.h
renderer/nano/: NanoRenderer.cpp  NanoRenderer.cu  NanoRenderer.h  RuntimeDataSet.cpp  RuntimeDataSet.h
tools/cudaSepCompilation/: CMakeLists.txt
tools/cudaSepCompilation/deviceLib/: deviceLib.cuh  deviceLibImpl.cu
tools/cudaSepCompilation/sepKernelComp/: kernelCode.cu  kernelCode.cuh  main.cpp
tools/cudaSepCompilation/singleComp/: singleCompilation.cu
tools/cudaSepCompilation/wrapperComp/: funcImpl.cu  kernelHeader.cuh  kernelImpl.cu  wrapperCompilation.cpp
tools/sofia/shared/: SofiaParams.h
viewer/: CMakeLists.txt  Camera.h  CameraControllers.cpp  NanoViewer.cpp  NanoViewer.h  ProfilersWindow.h  StaticColors.h
viewer/features/projectExplorer/: SofiaParameterSummaryView.cpp
viewer/features/transferMapping/: TransferMappingView.cpp
viewer/framework/: ModalViewBase.cpp  ModalViewBase.h
viewer/views/: VolumeView.cpp  VolumeView.h
